Added Latin_Kernel to all modern Arabic, Cyrillic, Greek_Core glyphsets

--- a/Lib/glyphsets/definitions/GF_Arabic_Core.yaml
+++ b/Lib/glyphsets/definitions/GF_Arabic_Core.yaml
@@ -1,4 +1,6 @@
 description: Basic character set covering the 3 most widely used languages
+include_glyphsets:
+- GF_Latin_Kernel
 language_codes:
 - ar_Arab
 - fa_Arab
