--- a/data/results/plist/CustomFilter_GF_Cyrillic.plist
+++ b/data/results/plist/CustomFilter_GF_Cyrillic.plist
@@ -5,9 +5,11 @@
 	<dict>
 		<key>list</key>
 		<array>
+			<string>space</string>
 			<string>exclam</string>
 			<string>quotedbl</string>
 			<string>numbersign</string>
+			<string>dollar</string>
 			<string>percent</string>
 			<string>ampersand</string>
 			<string>quotesingle</string>
@@ -31,13 +33,85 @@
 			<string>nine</string>
 			<string>colon</string>
 			<string>semicolon</string>
+			<string>less</string>
+			<string>equal</string>
+			<string>greater</string>
 			<string>question</string>
 			<string>at</string>
+			<string>A</string>
+			<string>B</string>
+			<string>C</string>
+			<string>D</string>
+			<string>E</string>
+			<string>F</string>
+			<string>G</string>
+			<string>H</string>
+			<string>I</string>
+			<string>J</string>
+			<string>K</string>
+			<string>L</string>
+			<string>M</string>
+			<string>N</string>
+			<string>O</string>
+			<string>P</string>
+			<string>Q</string>
+			<string>R</string>
+			<string>S</string>
+			<string>T</string>
+			<string>U</string>
+			<string>V</string>
+			<string>W</string>
+			<string>X</string>
+			<string>Y</string>
+			<string>Z</string>
 			<string>bracketleft</string>
 			<string>backslash</string>
 			<string>bracketright</string>
+			<string>asciicircum</string>
+			<string>underscore</string>
+			<string>grave</string>
+			<string>a</string>
+			<string>b</string>
+			<string>c</string>
+			<string>d</string>
+			<string>e</string>
+			<string>f</string>
+			<string>g</string>
+			<string>h</string>
+			<string>i</string>
+			<string>j</string>
+			<string>k</string>
+			<string>l</string>
+			<string>m</string>
+			<string>n</string>
+			<string>o</string>
+			<string>p</string>
+			<string>q</string>
+			<string>r</string>
+			<string>s</string>
+			<string>t</string>
+			<string>u</string>
+			<string>v</string>
+			<string>w</string>
+			<string>x</string>
+			<string>y</string>
+			<string>z</string>
+			<string>braceleft</string>
+			<string>bar</string>
+			<string>braceright</string>
+			<string>asciitilde</string>
+			<string>nbspace</string>
+			<string>cent</string>
+			<string>sterling</string>
+			<string>yen</string>
+			<string>copyright</string>
 			<string>guillemetleft</string>
+			<string>registered</string>
+			<string>degree</string>
+			<string>periodcentered</string>
 			<string>guillemetright</string>
+			<string>multiply</string>
+			<string>divide</string>
 			<string>apostrophemod</string>
 			<string>gravecomb</string>
 			<string>acutecomb</string>
@@ -166,11 +240,147 @@
 			<string>quotedblleft</string>
 			<string>quotedblright</string>
 			<string>quotedblbase</string>
+			<string>bullet</string>
 			<string>ellipsis</string>
+			<string>euro</string>
 			<string>numero</string>
+			<string>trademark</string>
+			<string>minus</string>
 		</array>
 		<key>name</key>
 		<string>GF_Cyrillic_Core</string>
+	</dict>
+	<dict>
+		<key>list</key>
+		<array>
+			<string>guillemetleft</string>
+			<string>guillemetright</string>
+			<string>apostrophemod</string>
+			<string>gravecomb</string>
+			<string>acutecomb</string>
+			<string>macroncomb</string>
+			<string>brevecomb</string>
+			<string>dieresiscomb</string>
+			<string>Io-cy</string>
+			<string>Dje-cy</string>
+			<string>E-cy</string>
+			<string>I-cy</string>
+			<string>Yi-cy</string>
+			<string>Je-cy</string>
+			<string>Lje-cy</string>
+			<string>Nje-cy</string>
+			<string>Tshe-cy</string>
+			<string>Ushort-cy</string>
+			<string>Dzhe-cy</string>
+			<string>A-cy</string>
+			<string>Be-cy</string>
+			<string>Ve-cy</string>
+			<string>Ge-cy</string>
+			<string>De-cy</string>
+			<string>Ie-cy</string>
+			<string>Zhe-cy</string>
+			<string>Ze-cy</string>
+			<string>Ii-cy</string>
+			<string>Iishort-cy</string>
+			<string>Ka-cy</string>
+			<string>El-cy</string>
+			<string>Em-cy</string>
+			<string>En-cy</string>
+			<string>O-cy</string>
+			<string>Pe-cy</string>
+			<string>Er-cy</string>
+			<string>Es-cy</string>
+			<string>Te-cy</string>
+			<string>U-cy</string>
+			<string>Ef-cy</string>
+			<string>Ha-cy</string>
+			<string>Tse-cy</string>
+			<string>Che-cy</string>
+			<string>Sha-cy</string>
+			<string>Shcha-cy</string>
+			<string>Hardsign-cy</string>
+			<string>Yeru-cy</string>
+			<string>Softsign-cy</string>
+			<string>Ereversed-cy</string>
+			<string>Yu-cy</string>
+			<string>Ya-cy</string>
+			<string>a-cy</string>
+			<string>be-cy</string>
+			<string>ve-cy</string>
+			<string>ge-cy</string>
+			<string>de-cy</string>
+			<string>ie-cy</string>
+			<string>zhe-cy</string>
+			<string>ze-cy</string>
+			<string>ii-cy</string>
+			<string>iishort-cy</string>
+			<string>ka-cy</string>
+			<string>el-cy</string>
+			<string>em-cy</string>
+			<string>en-cy</string>
+			<string>o-cy</string>
+			<string>pe-cy</string>
+			<string>er-cy</string>
+			<string>es-cy</string>
+			<string>te-cy</string>
+			<string>u-cy</string>
+			<string>ef-cy</string>
+			<string>ha-cy</string>
+			<string>tse-cy</string>
+			<string>che-cy</string>
+			<string>sha-cy</string>
+			<string>shcha-cy</string>
+			<string>hardsign-cy</string>
+			<string>yeru-cy</string>
+			<string>softsign-cy</string>
+			<string>ereversed-cy</string>
+			<string>yu-cy</string>
+			<string>ya-cy</string>
+			<string>io-cy</string>
+			<string>dje-cy</string>
+			<string>e-cy</string>
+			<string>i-cy</string>
+			<string>yi-cy</string>
+			<string>je-cy</string>
+			<string>lje-cy</string>
+			<string>nje-cy</string>
+			<string>tshe-cy</string>
+			<string>ushort-cy</string>
+			<string>dzhe-cy</string>
+			<string>Geupturn-cy</string>
+			<string>geupturn-cy</string>
+			<string>Gestroke-cy</string>
+			<string>gestroke-cy</string>
+			<string>Zhedescender-cy</string>
+			<string>zhedescender-cy</string>
+			<string>Kadescender-cy</string>
+			<string>kadescender-cy</string>
+			<string>Endescender-cy</string>
+			<string>endescender-cy</string>
+			<string>Ustraight-cy</string>
+			<string>ustraight-cy</string>
+			<string>Ustraightstroke-cy</string>
+			<string>ustraightstroke-cy</string>
+			<string>Hadescender-cy</string>
+			<string>hadescender-cy</string>
+			<string>Chedescender-cy</string>
+			<string>chedescender-cy</string>
+			<string>Shha-cy</string>
+			<string>shha-cy</string>
+			<string>Schwa-cy</string>
+			<string>schwa-cy</string>
+			<string>Imacron-cy</string>
+			<string>imacron-cy</string>
+			<string>Obarred-cy</string>
+			<string>obarred-cy</string>
+			<string>Umacron-cy</string>
+			<string>umacron-cy</string>
+			<string>quotesinglbase</string>
+			<string>quotedblbase</string>
+			<string>numero</string>
+		</array>
+		<key>name</key>
+		<string>GF_Cyrillic_Core Exclusive</string>
 	</dict>
 	<dict>
 		<key>list</key>
@@ -218,9 +428,11 @@
 	<dict>
 		<key>list</key>
 		<array>
+			<string>space</string>
 			<string>exclam</string>
 			<string>quotedbl</string>
 			<string>numbersign</string>
+			<string>dollar</string>
 			<string>percent</string>
 			<string>ampersand</string>
 			<string>quotesingle</string>
@@ -244,13 +456,85 @@
 			<string>nine</string>
 			<string>colon</string>
 			<string>semicolon</string>
+			<string>less</string>
+			<string>equal</string>
+			<string>greater</string>
 			<string>question</string>
 			<string>at</string>
+			<string>A</string>
+			<string>B</string>
+			<string>C</string>
+			<string>D</string>
+			<string>E</string>
+			<string>F</string>
+			<string>G</string>
+			<string>H</string>
+			<string>I</string>
+			<string>J</string>
+			<string>K</string>
+			<string>L</string>
+			<string>M</string>
+			<string>N</string>
+			<string>O</string>
+			<string>P</string>
+			<string>Q</string>
+			<string>R</string>
+			<string>S</string>
+			<string>T</string>
+			<string>U</string>
+			<string>V</string>
+			<string>W</string>
+			<string>X</string>
+			<string>Y</string>
+			<string>Z</string>
 			<string>bracketleft</string>
 			<string>backslash</string>
 			<string>bracketright</string>
+			<string>asciicircum</string>
+			<string>underscore</string>
+			<string>grave</string>
+			<string>a</string>
+			<string>b</string>
+			<string>c</string>
+			<string>d</string>
+			<string>e</string>
+			<string>f</string>
+			<string>g</string>
+			<string>h</string>
+			<string>i</string>
+			<string>j</string>
+			<string>k</string>
+			<string>l</string>
+			<string>m</string>
+			<string>n</string>
+			<string>o</string>
+			<string>p</string>
+			<string>q</string>
+			<string>r</string>
+			<string>s</string>
+			<string>t</string>
+			<string>u</string>
+			<string>v</string>
+			<string>w</string>
+			<string>x</string>
+			<string>y</string>
+			<string>z</string>
+			<string>braceleft</string>
+			<string>bar</string>
+			<string>braceright</string>
+			<string>asciitilde</string>
+			<string>nbspace</string>
+			<string>cent</string>
+			<string>sterling</string>
+			<string>yen</string>
+			<string>copyright</string>
 			<string>guillemetleft</string>
+			<string>registered</string>
+			<string>degree</string>
+			<string>periodcentered</string>
 			<string>guillemetright</string>
+			<string>multiply</string>
+			<string>divide</string>
 			<string>apostrophemod</string>
 			<string>gravecomb</string>
 			<string>acutecomb</string>
@@ -422,8 +706,12 @@
 			<string>quotedblleft</string>
 			<string>quotedblright</string>
 			<string>quotedblbase</string>
+			<string>bullet</string>
 			<string>ellipsis</string>
+			<string>euro</string>
 			<string>numero</string>
+			<string>trademark</string>
+			<string>minus</string>
 		</array>
 		<key>name</key>
 		<string>GF_Cyrillic_Plus</string>
@@ -481,9 +769,11 @@
 	<dict>
 		<key>list</key>
 		<array>
+			<string>space</string>
 			<string>exclam</string>
 			<string>quotedbl</string>
 			<string>numbersign</string>
+			<string>dollar</string>
 			<string>percent</string>
 			<string>ampersand</string>
 			<string>quotesingle</string>
@@ -507,13 +797,85 @@
 			<string>nine</string>
 			<string>colon</string>
 			<string>semicolon</string>
+			<string>less</string>
+			<string>equal</string>
+			<string>greater</string>
 			<string>question</string>
 			<string>at</string>
+			<string>A</string>
+			<string>B</string>
+			<string>C</string>
+			<string>D</string>
+			<string>E</string>
+			<string>F</string>
+			<string>G</string>
+			<string>H</string>
+			<string>I</string>
+			<string>J</string>
+			<string>K</string>
+			<string>L</string>
+			<string>M</string>
+			<string>N</string>
+			<string>O</string>
+			<string>P</string>
+			<string>Q</string>
+			<string>R</string>
+			<string>S</string>
+			<string>T</string>
+			<string>U</string>
+			<string>V</string>
+			<string>W</string>
+			<string>X</string>
+			<string>Y</string>
+			<string>Z</string>
 			<string>bracketleft</string>
 			<string>backslash</string>
 			<string>bracketright</string>
+			<string>asciicircum</string>
+			<string>underscore</string>
+			<string>grave</string>
+			<string>a</string>
+			<string>b</string>
+			<string>c</string>
+			<string>d</string>
+			<string>e</string>
+			<string>f</string>
+			<string>g</string>
+			<string>h</string>
+			<string>i</string>
+			<string>j</string>
+			<string>k</string>
+			<string>l</string>
+			<string>m</string>
+			<string>n</string>
+			<string>o</string>
+			<string>p</string>
+			<string>q</string>
+			<string>r</string>
+			<string>s</string>
+			<string>t</string>
+			<string>u</string>
+			<string>v</string>
+			<string>w</string>
+			<string>x</string>
+			<string>y</string>
+			<string>z</string>
+			<string>braceleft</string>
+			<string>bar</string>
+			<string>braceright</string>
+			<string>asciitilde</string>
+			<string>nbspace</string>
+			<string>cent</string>
+			<string>sterling</string>
+			<string>yen</string>
+			<string>copyright</string>
 			<string>guillemetleft</string>
+			<string>registered</string>
+			<string>degree</string>
+			<string>periodcentered</string>
 			<string>guillemetright</string>
+			<string>multiply</string>
+			<string>divide</string>
 			<string>apostrophemod</string>
 			<string>gravecomb</string>
 			<string>acutecomb</string>
@@ -739,8 +1101,12 @@
 			<string>quotedblleft</string>
 			<string>quotedblright</string>
 			<string>quotedblbase</string>
+			<string>bullet</string>
 			<string>ellipsis</string>
+			<string>euro</string>
 			<string>numero</string>
+			<string>trademark</string>
+			<string>minus</string>
 		</array>
 		<key>name</key>
 		<string>GF_Cyrillic_Pro</string>
