--- a/Lib/glyphsets/definitions/GF_Greek_Core.yaml
+++ b/Lib/glyphsets/definitions/GF_Greek_Core.yaml
@@ -2,5 +2,7 @@ description: "**General Use:** Basic Monotonic set for everyday Modern Greek\n\n
   Basic Greek UC ` ΆΈΉΊΌΎΏΐΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩΪΫ `\n* Basic Greek LC ` άέήίΰαβγδεζηθικλμνξοπρςστυφχψωϊϋόύώ
   `\n* Punctuation ` · ; `\n* Greek numeral signs or keraia ` ʹ ͵ `\n* Accents ` \
   \ ́ ΅ `\n* Kai symbol ` ϗ Ϗ `"
+include_glyphsets:
+- GF_Latin_Kernel
 language_codes:
 - el_Grek
