--- a/data/results/plist/CustomFilter_GF_Greek.plist
+++ b/data/results/plist/CustomFilter_GF_Greek.plist
@@ -622,10 +622,14 @@
 	<dict>
 		<key>list</key>
 		<array>
+			<string>space</string>
 			<string>exclam</string>
 			<string>quotedbl</string>
+			<string>numbersign</string>
+			<string>dollar</string>
 			<string>percent</string>
 			<string>ampersand</string>
+			<string>quotesingle</string>
 			<string>parenleft</string>
 			<string>parenright</string>
 			<string>asterisk</string>
@@ -646,12 +650,85 @@
 			<string>nine</string>
 			<string>colon</string>
 			<string>semicolon</string>
+			<string>less</string>
+			<string>equal</string>
+			<string>greater</string>
+			<string>question</string>
 			<string>at</string>
+			<string>A</string>
+			<string>B</string>
+			<string>C</string>
+			<string>D</string>
+			<string>E</string>
+			<string>F</string>
+			<string>G</string>
+			<string>H</string>
+			<string>I</string>
+			<string>J</string>
+			<string>K</string>
+			<string>L</string>
+			<string>M</string>
+			<string>N</string>
+			<string>O</string>
+			<string>P</string>
+			<string>Q</string>
+			<string>R</string>
+			<string>S</string>
+			<string>T</string>
+			<string>U</string>
+			<string>V</string>
+			<string>W</string>
+			<string>X</string>
+			<string>Y</string>
+			<string>Z</string>
 			<string>bracketleft</string>
 			<string>backslash</string>
 			<string>bracketright</string>
+			<string>asciicircum</string>
+			<string>underscore</string>
+			<string>grave</string>
+			<string>a</string>
+			<string>b</string>
+			<string>c</string>
+			<string>d</string>
+			<string>e</string>
+			<string>f</string>
+			<string>g</string>
+			<string>h</string>
+			<string>i</string>
+			<string>j</string>
+			<string>k</string>
+			<string>l</string>
+			<string>m</string>
+			<string>n</string>
+			<string>o</string>
+			<string>p</string>
+			<string>q</string>
+			<string>r</string>
+			<string>s</string>
+			<string>t</string>
+			<string>u</string>
+			<string>v</string>
+			<string>w</string>
+			<string>x</string>
+			<string>y</string>
+			<string>z</string>
+			<string>braceleft</string>
+			<string>bar</string>
+			<string>braceright</string>
+			<string>asciitilde</string>
+			<string>nbspace</string>
+			<string>cent</string>
+			<string>sterling</string>
+			<string>yen</string>
+			<string>copyright</string>
 			<string>guillemetleft</string>
+			<string>registered</string>
+			<string>degree</string>
+			<string>periodcentered</string>
 			<string>guillemetright</string>
+			<string>multiply</string>
+			<string>divide</string>
 			<string>acutecomb</string>
 			<string>dieresiscomb</string>
 			<string>numeral-greek</string>
@@ -733,10 +810,106 @@
 			<string>kaiSymbol</string>
 			<string>endash</string>
 			<string>emdash</string>
+			<string>quoteleft</string>
+			<string>quoteright</string>
+			<string>quotedblleft</string>
+			<string>quotedblright</string>
+			<string>bullet</string>
 			<string>ellipsis</string>
+			<string>euro</string>
+			<string>trademark</string>
+			<string>minus</string>
 		</array>
 		<key>name</key>
 		<string>GF_Greek_Core</string>
+	</dict>
+	<dict>
+		<key>list</key>
+		<array>
+			<string>guillemetleft</string>
+			<string>guillemetright</string>
+			<string>acutecomb</string>
+			<string>dieresiscomb</string>
+			<string>numeral-greek</string>
+			<string>lowernumeral-greek</string>
+			<string>questiongreek</string>
+			<string>tonos</string>
+			<string>dieresistonos</string>
+			<string>Alphatonos</string>
+			<string>anoteleia</string>
+			<string>Epsilontonos</string>
+			<string>Etatonos</string>
+			<string>Iotatonos</string>
+			<string>Omicrontonos</string>
+			<string>Upsilontonos</string>
+			<string>Omegatonos</string>
+			<string>iotadieresistonos</string>
+			<string>Alpha</string>
+			<string>Beta</string>
+			<string>Gamma</string>
+			<string>Delta</string>
+			<string>Epsilon</string>
+			<string>Zeta</string>
+			<string>Eta</string>
+			<string>Theta</string>
+			<string>Iota</string>
+			<string>Kappa</string>
+			<string>Lambda</string>
+			<string>Mu</string>
+			<string>Nu</string>
+			<string>Xi</string>
+			<string>Omicron</string>
+			<string>Pi</string>
+			<string>Rho</string>
+			<string>Sigma</string>
+			<string>Tau</string>
+			<string>Upsilon</string>
+			<string>Phi</string>
+			<string>Chi</string>
+			<string>Psi</string>
+			<string>Omega</string>
+			<string>Iotadieresis</string>
+			<string>Upsilondieresis</string>
+			<string>alphatonos</string>
+			<string>epsilontonos</string>
+			<string>etatonos</string>
+			<string>iotatonos</string>
+			<string>upsilondieresistonos</string>
+			<string>alpha</string>
+			<string>beta</string>
+			<string>gamma</string>
+			<string>delta</string>
+			<string>epsilon</string>
+			<string>zeta</string>
+			<string>eta</string>
+			<string>theta</string>
+			<string>iota</string>
+			<string>kappa</string>
+			<string>lambda</string>
+			<string>mu</string>
+			<string>nu</string>
+			<string>xi</string>
+			<string>omicron</string>
+			<string>pi</string>
+			<string>rho</string>
+			<string>sigmafinal</string>
+			<string>sigma</string>
+			<string>tau</string>
+			<string>upsilon</string>
+			<string>phi</string>
+			<string>chi</string>
+			<string>psi</string>
+			<string>omega</string>
+			<string>iotadieresis</string>
+			<string>upsilondieresis</string>
+			<string>omicrontonos</string>
+			<string>upsilontonos</string>
+			<string>omegatonos</string>
+			<string>KaiSymbol</string>
+			<string>kaiSymbol</string>
+		</array>
+		<key>name</key>
+		<string>GF_Greek_Core Exclusive</string>
 	</dict>
 	<dict>
 		<key>list</key>
