--- a/data/results/plist/CustomFilter_GF_All.plist
+++ b/data/results/plist/CustomFilter_GF_All.plist
@@ -3971,6 +3971,7 @@
 			<string>vturned</string>
 			<string>ezh</string>
 			<string>glottalstop</string>
+			<string>glottalstopreversed</string>
 			<string>bilabialclick</string>
 			<string>jcrossedtail</string>
 			<string>wmod</string>
@@ -4089,6 +4090,8 @@
 			<string>vtilde</string>
 			<string>Vdotbelow</string>
 			<string>vdotbelow</string>
+			<string>Wacute</string>
+			<string>wacute</string>
 			<string>Wdieresis</string>
 			<string>wdieresis</string>
 			<string>Xdotaccent</string>
